added header information

--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
       src="https://kit.fontawesome.com/31443dff22.js"
       crossorigin="anonymous"
     ></script>
-    
+
     <title>Homepage</title>
   </head>
   <body>
-    <div class="bg-warning">
-      <h1>Hello</h1>
-    </div>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat
-    </p>
-    <i class="fa-brands fa-instagram"></i>
+    <header>
+      <p>👋🏼 I am</p>
+      <h1>AJC</h1>
+      <h2>A front-end developer based in Australia 🇦🇺</h2>
+      <a href="#" class="btn btn-primary">Contact Me</a>
+      <div class="separator"></div>
+    </header>
+    <main>
+
+    </main>
+    
   </body>
 </html>
