styled the header

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   </head>
   <body>
     <header>
-      <p>👋🏼 I am</p>
+      <p>👋🏼 Hi, I am</p>
       <h1>AJC</h1>
       <h2>A front-end developer based in Australia 🇦🇺</h2>
-      <a href="#" class="btn btn-primary">Contact Me</a>
+      <a href="#" class="btn btn-branding">Contact Me</a>
       <div class="separator"></div>
     </header>
     <main>
