--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="./style.css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/31443dff22.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/31443dff22.js" crossorigin="anonymous"></script>
 
     <title>Homepage</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <p>👋🏼 Hi, I am</p>
-      <h1>AJC</h1>
-      <h2>A front-end developer based in Australia 🇦🇺</h2>
-      <a href="#" class="btn btn-branding">Contact Me</a>
-      <div class="separator"></div>
+        <p>👋🏼 Hi, I am</p>
+        <h1>AJC</h1>
+        <h2>A front-end developer based in Australia 🇦🇺</h2>
+        <a href="#" class="btn btn-branding">Contact Me</a>
+        <div class="separator"></div>
     </header>
     <main>
-
+        <p class="text-center m-5"> Featured Projects</p>
+        <h2 class="mb-5">World Clock</h2>
+        <p class="mb-4">This World Clock allows users to check the current time and date across multiple cities worldwide, with a
+            sleek and
+            user-friendly design. It features a dropdown menu for selecting cities, dynamically displaying updated times
+            for each
+            location. The project is hosted on Netlify and open-sourced on GitHub</p>
+        <a href="https://world-horologium.netlify.app/" class="btn btn-branding-outline" target="_blank">Try Now</a>
     </main>
-    
-  </body>
+
+</body>
+
 </html>
