Add new app info and images; improve responsive design

--- a/index.html
+++ b/index.html
@@ -40,22 +40,75 @@
     <main>
       <p class="text-center m-5">Featured Projects</p>
       <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <h2 class="mb-5">World Clock</h2>
-            <p class="mb-4 text-muted">
-              This World Clock allows users to check the current time and date
-              across multiple cities worldwide, with a sleek and user-friendly
-              design. It features a dropdown menu for selecting cities,
-              dynamically displaying updated times for each location. The
-              project is hosted on Netlify and open-sourced on GitHub
-            </p>
-            <a
-              href="https://world-horologium.netlify.app/"
-              class="btn btn-branding-outline"
-              target="_blank"
-              >Try Now</a
-            >
+        <div class="row mb-5 align-items-center">
+          <div class="col-12 col-md-6 ">
+            <img src="images/clock.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="project-description">
+              <h2 class="mb-5">World Clock</h2>
+              <p class="mb-4 text-muted">
+                This World Clock allows users to check the current time and date
+                across multiple cities worldwide, with a sleek and user-friendly
+                design. It features a dropdown menu for selecting cities,
+                dynamically displaying updated times for each location. The
+                project is hosted on Netlify and open-sourced on GitHub.
+              </p>
+              <a
+                href="https://world-horologium.netlify.app/"
+                class="btn btn-branding-outline"
+                target="_blank"
+                >Try Now</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5 align-items-center">
+          <div class="col-12 col-md-6">
+            <div class="project-description">
+              <h2 class="mb-5">Story Starter Generator</h2>
+              <p class="mb-4 text-muted">
+                The Story Starter Generator is an AI-powered tool designed to
+                help writers overcome the challenge of beginning a story. By
+                entering a few keywords, users can generate a unique, engaging
+                opening paragraph tailored to their input, sparking inspiration
+                for creative writing. This project is hosted on Netlify,
+                open-sourced on GitHub.
+              </p>
+              <a
+                href="https://story-starters.netlify.app"
+                class="btn btn-branding-outline"
+                target="_blank"
+                >Try Now</a
+              >
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <img src="images/story-starter.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
+            <img src="images/weather.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="project-description">
+              <h2 class="mb-5">Weather App</h2>
+              <p class="mb-4 text-muted">
+                Tenki Forecast is a sleek and responsive weather app that allows
+                users to search for their city and instantly access current
+                weather conditions, including temperature, humidity, wind speed,
+                and more. It also provides a 5-day forecast with intuitive icons
+                to represent changing weather patterns. Hosted on Netlify and
+                open-sourced on GitHub.
+              </p>
+              <a
+                href="https://tenki-forcast.netlify.app"
+                class="btn btn-branding-outline"
+                target="_blank"
+                >Try Now</a
+              >
+            </div>
           </div>
         </div>
       </div>
