--- a/index.html
+++ b/index.html
@@ -113,5 +113,8 @@
         </div>
       </div>
     </main>
+    <footer>
+        Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
+    </footer>
   </body>
 </html>
