--- a/index.html
+++ b/index.html
@@ -28,7 +28,31 @@
 
     <title>Homepage</title>
   </head>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">AJC</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/about.html">About AJC</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
+        </li>        
+      </ul>
+    </div>
+  </div>
+</nav>
   <body>
     <header>
       <p>👋🏼 Hi, I am</p>
