--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <title>Homepage</title>
   </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light custom-navbar" >
   <div class="container-fluid">
     <a class="navbar-brand" href="/">AJC</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
