--- a/pages/about.html
+++ b/pages/about.html
@@ -17,8 +17,33 @@
     <link rel="stylesheet" href="./style.css/style.css" />
     <script src="https://kit.fontawesome.com/31443dff22.js" crossorigin="anonymous"></script>
 
-    <title>About AJC</title>
+    <title>Homepage</title>
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">AJC</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/about.html">About AJC</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <body>
     <header>
@@ -30,6 +55,7 @@
     </header>
     <main>
         
+    </main>
     <footer>
         Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify
         </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
