added about page with basic information and images

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,47 +14,52 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="./style.css/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <script src="https://kit.fontawesome.com/31443dff22.js" crossorigin="anonymous"></script>
 
-    <title>Homepage</title>
+    <title>About AJC</title>
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">AJC</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">About AJC</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">AJC</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/pages/about.html">About AJC</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header>
-        <p>👋🏼 Hi, I am</p>
-        <h1>AJC</h1>
+        <h1>About AJC</h1>
         <h2>A front-end developer based in Australia 🇦🇺</h2>
         <a href="#" class="btn btn-branding">Contact Me</a>
         <div class="separator"></div>
     </header>
     <main>
-        
+    <img src="../images/cover-photo.png" alt="Profile Cover" class="img-fluid">
+       <h2>About Me</h2>
+       <p>I am a passionate and self-driven coder, currently building my skills through hands-on projects and app development. My
+    journey into coding started with curiosity and truly flourished when I began with SheCodes, growing into a love for
+    creating innovative solutions. From crafting dynamic weather apps to exploring ways to merge technology with my art and
+    animation background, I’m constantly brainstorming new tools that simplify and inspire. As I continue to learn and grow,
+    my ultimate goal is to bridge the gap between technology and artistry, crafting projects that connect on both functional
+    and creative levels.</p>
     </main>
     <footer>
         Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify
