--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script
       src="https://kit.fontawesome.com/31443dff22.js"
       crossorigin="anonymous"
@@ -28,7 +28,7 @@
 
     <title>Homepage</title>
   </head>
-<nav class="navbar navbar-expand-lg navbar-light custom-navbar" >
+<nav class="navbar navbar-expand-lg navbar-dark custom-navbar" >
   <div class="container-fluid">
     <a class="navbar-brand" href="/">AJC</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
