added css to about page

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       </div>
     </main>
     <footer>
+      <div class="separator"></div>
         Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
     </footer>
   </body>
