adjusted about css for responsiveness

--- a/pages/about.html
+++ b/pages/about.html
@@ -96,25 +96,37 @@
               between technology and artistry, crafting projects that connect on
               both functional and creative levels.
             </p>
-        <div class="icons-container">
-            <div class="row justify-content-center social-icons">
+            <div class="icons-container">
+              <div class="row justify-content-center social-icons">
                 <div class="col-auto">
-                    <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+                  <a
+                    href="https://www.instagram.com"
+                    target="_blank"
+                    aria-label="Instagram"
+                  >
+                    <i class="fab fa-instagram"></i>
+                  </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-                        <i class="fab fa-facebook"></i>
-                    </a>
+                  <a
+                    href="https://www.facebook.com"
+                    target="_blank"
+                    aria-label="Facebook"
+                  >
+                    <i class="fab fa-facebook"></i>
+                  </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
+                  <a
+                    href="https://www.twitter.com"
+                    target="_blank"
+                    aria-label="Twitter"
+                  >
+                    <i class="fab fa-twitter"></i>
+                  </a>
                 </div>
+              </div>
             </div>
-        </div>
           </div>
         </div>
       </div>
