adjusted about page information

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,7 +32,7 @@
                     <a class="nav-link"  href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">About AJC</a>
+                    <a class="nav-link" href="/pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pages/contact.html">Contact</a>
