--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About AJC</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/contact.html">Contact</a>
