--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
                 class="nav-link active"
                 aria-current="page"
                 href="/pages/about.html"
-                >About AJC</a
+                >About</a
               >
             </li>
             <li class="nav-item">
@@ -85,16 +85,15 @@
             />
             <h2 class="about-heading mb-3">About Me</h2>
             <p class="about-paragraph text-muted">
-              I am a passionate and self-driven coder, currently building my
-              skills through hands-on projects and app development. My journey
-              into coding started with curiosity and truly flourished when I
-              began with SheCodes, growing into a love for creating innovative
-              solutions. From crafting dynamic weather apps to exploring ways to
-              merge technology with my art and animation background, I’m
-              constantly brainstorming new tools that simplify and inspire. As I
-              continue to learn and grow, my ultimate goal is to bridge the gap
-              between technology and artistry, crafting projects that connect on
-              both functional and creative levels.
+              I’m a creative and driven coder, building my skills through
+              hands-on projects and app development. My journey into coding
+              began with curiosity and truly flourished when I joined SheCodes,
+              sparking a passion for crafting innovative and meaningful
+              solutions. <br /> From developing dynamic weather apps to finding ways to
+              merge technology with my love for art and animation, I’m always
+              exploring new ideas that simplify and inspire. As I continue to
+              grow, my goal is to seamlessly blend creativity and functionality,
+              creating projects that are both impactful and engaging.
             </p>
             <div class="icons-container">
               <div class="row justify-content-center social-icons">
