added portfolio page and css

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -47,13 +47,40 @@
 
 <body>
     <header>
-        <h1>Portfolio</h1>
-        <h2>🇦🇺 Australian based front-end developer</h2>
+        <h1 class="portfolio-title">Portfolio</h1>
+        <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
         <a href="#" class="btn btn-branding">Contact Me</a>
         <div class="separator"></div>
     </header>
     <main>
-       
+       <div class="content-container">
+        <div class="content">
+            <h3 class="text-center mb-5">Take a look at the projects I have working on</h3>
+            <div class="row">
+                <div class="col-md-6 mb-5">
+                    <img src="../images/story-starter.png" class="img-fluid portfolio-image" alt=""/>
+                    <h2 class="text-center mb-0">Story Starter Generator</h2>
+                    <p class="text-center text-muted">built with HTML and CSS</p>
+                </div>
+                <div class="col-md-6 mb-5">
+                    <img src="../images/single-city-weather.png" class="img-fluid portfolio-image" alt="" />
+                    <h2 class="text-center mb-0">City Weather Forcast</h2>
+                    <p class="text-center text-muted">built with HTML, CSS and Javascript</p>
+                </div>
+                <div class="col-md-6 mb-5">
+                    <img src="../images/clock.png" class="img-fluid portfolio-image" alt="" />
+                    <h2 class="text-center mb-0">Word Clock</h2>
+                    <p class="text-center text-muted">built with HTML and CSS</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="../images/weather.png" class="img-fluid portfolio-image" alt="" />
+                    <h2 class="text-center mb-0">Multi-day Weather Forcast</h2>
+                    <p class="text-center text-muted">built with HTML and CSS</p>
+                </div>
+                
+            </div>
+        </div>
+       </div>
     </main>
     <footer>
         <div class="separator"></div>
