--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,92 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../style/style.css" />
-    <script src="https://kit.fontawesome.com/31443dff22.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/31443dff22.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Portfolio</title>
-</head>
-<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+  </head>
+  <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">AJC</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link"  href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pages/contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="/">AJC</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/pages/portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
 
-<body>
+  <body>
     <header>
-        <h1 class="portfolio-title">Portfolio</h1>
-        <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
-        <a href="#" class="btn btn-branding">Contact Me</a>
-        <div class="separator"></div>
+      <h1 class="portfolio-title">Portfolio</h1>
+      <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
+      <a href="#" class="btn btn-branding">Contact Me</a>
+      <div class="separator"></div>
     </header>
     <main>
-       <div class="content-container">
+      <div class="content-container">
         <div class="content">
-            <h3 class="text-center mb-5">Take a look at the projects I have working on</h3>
-            <div class="row">
-                <div class="col-md-6 mb-5">
-                    <img src="../images/story-starter.png" class="img-fluid portfolio-image" alt=""/>
-                    <h2 class="text-center mb-0">Story Starter Generator</h2>
-                    <p class="text-center text-muted">built with HTML and CSS</p>
-                </div>
-                <div class="col-md-6 mb-5">
-                    <img src="../images/single-city-weather.png" class="img-fluid portfolio-image" alt="" />
-                    <h2 class="text-center mb-0">City Weather Forcast</h2>
-                    <p class="text-center text-muted">built with HTML, CSS and Javascript</p>
-                </div>
-                <div class="col-md-6 mb-5">
-                    <img src="../images/clock.png" class="img-fluid portfolio-image" alt="" />
-                    <h2 class="text-center mb-0">Word Clock</h2>
-                    <p class="text-center text-muted">built with HTML and CSS</p>
-                </div>
-                <div class="col-md-6">
-                    <img src="../images/weather.png" class="img-fluid portfolio-image" alt="" />
-                    <h2 class="text-center mb-0">Multi-day Weather Forcast</h2>
-                    <p class="text-center text-muted">built with HTML and CSS</p>
-                </div>
-                
+          <h3 class="text-center mb-5">
+            Take a look at the projects I have working on
+          </h3>
+          <div class="row">
+            <div class="col-md-6 mb-5">
+              <img
+                src="../images/story-starter.png"
+                class="img-fluid portfolio-image"
+                alt=""
+              />
+              <h2 class="text-center mb-0">Story Starter Generator</h2>
+              <p class="text-center text-muted">built with HTML and CSS</p>
+              <div class="d-flex justify-content-center">
+                <a
+                  href="https://story-starters.netlify.app"
+                  class="btn btn-branding-outline"
+                  target="_blank"
+                  >Try Now</a
+                >
+              </div>
             </div>
+            <div class="col-md-6 mb-5">
+              <img
+                src="../images/single-city-weather.png"
+                class="img-fluid portfolio-image"
+                alt=""
+              />
+              <h2 class="text-center mb-0">City Weather Forcast</h2>
+              <p class="text-center text-muted">
+                built with HTML, CSS and Javascript
+              </p>
+              <div class="d-flex justify-content-center">
+                <a
+                  href="https://weather-app-lux.netlify.app"
+                  class="btn btn-branding-outline"
+                  target="_blank"
+                  >Try Now</a
+                >
+              </div>
+            </div>
+            <div class="col-md-6 mb-5">
+              <img
+                src="../images/clock.png"
+                class="img-fluid portfolio-image"
+                alt=""
+              />
+              <h2 class="text-center mb-0">Word Clock</h2>
+              <p class="text-center text-muted">built with HTML and CSS</p>
+              <div class="d-flex justify-content-center">
+                <a
+                  href="https://world-horologium.netlify.app/"
+                  class="btn btn-branding-outline"
+                  target="_blank"
+                  >Try Now</a
+                >
+              </div>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="../images/weather.png"
+                class="img-fluid portfolio-image mb-4"
+                alt=""
+              />
+              <h2 class="text-center mb-0">Multi-day Weather Forcast</h2>
+              <p class="text-center text-muted">built with HTML, CSS and Javascript</p>
+              <div class="d-flex justify-content-center">
+                <a
+                  href="https://tenki-forcast.netlify.app"
+                  class="btn btn-branding-outline"
+                  target="_blank"
+                  >Try Now</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
-       </div>
+      </div>
     </main>
     <footer>
-        <div class="separator"></div>
-        Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify
-        </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
+      <div class="separator"></div>
+      Coded by AJC and is hosted on
+      <a
+        href="https://responsive-project-portfolio.netlify.app"
+        target="_blank"
+      >
+        Netify </a
+      >and
+      <a
+        href="https://github.com/InvisibleEnigma/responsive-project"
+        target="_blank"
+      >
+        Github</a
+      >.
     </footer>
-</body>
-
+  </body>
 </html>
