--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -76,7 +76,7 @@
     <main>
       <div class="content-container">
         <div class="content">
-          <h3 class="text-center mb-5">
+          <h3 class="text-center mb-5 text-muted">
             Take a look at the projects I have working on
           </h3>
           <div class="row">
