--- a/pages/about.html
+++ b/pages/about.html
@@ -67,7 +67,7 @@
       </div>
     </nav>
     <header>
-      <div class="about-section">
+      <div class="header-section">
         <h1>About AJC</h1>
         <h2>A front-end developer based in Australia 🇦🇺</h2>
         <a href="#" class="btn btn-branding">Contact Me</a>
@@ -75,7 +75,7 @@
       <div class="separator"></div>
     </header>
     <main>
-      <div class="about-container">
+      <div class="main-container">
         <div class="row justify-content-center align-items-center">
           <div class="col-12 col-md-6">
             <img
