adjusted responsive aspect on contact page

--- a/pages/about.html
+++ b/pages/about.html
@@ -68,8 +68,8 @@
     </nav>
     <header>
       <div class="header-section">
-        <h1>About AJC</h1>
-        <h2>A front-end developer based in Australia 🇦🇺</h2>
+        <h1 class="page-title">About AJC</h1>
+        <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
         <a href="#" class="btn btn-branding">Contact Me</a>
       </div>
       <div class="separator"></div>
