--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,8 +48,8 @@
     </nav>
     <header>
         <div class="header-section">
-            <h1>Contact Me</h1>
-            <h2>A front-end developer based in Australia 🇦🇺</h2>
+            <h1 class="page-title">Contact Me</h1>
+            <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
             <a href="#" class="btn btn-branding">Contact Me</a>
         </div>
         <div class="separator"></div>
