--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -68,7 +68,7 @@
 
   <body>
     <header>
-      <h1 class="portfolio-title">Portfolio</h1>
+      <h1 class="page-title">Portfolio</h1>
       <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
       <a href="#" class="btn btn-branding">Contact Me</a>
       <div class="separator"></div>
