added style to footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -81,8 +81,7 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="separator"></div>
+    <footer class="custom-footer">
         Coded by AJC and is hosted on
         <a href="https://responsive-project-portfolio.netlify.app" target="_blank">
             Netify </a>and
