--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="separator"></div>
+    <footer class="custom-footer">
         Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
     </footer>
   </body>
