--- a/pages/about.html
+++ b/pages/about.html
@@ -130,8 +130,7 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="separator"></div>
+    <footer class="custom-footer">
       Coded by AJC and is hosted on
       <a
         href="https://responsive-project-portfolio.netlify.app"
