added button links and adjusted footer css

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,7 @@
       <div class="header-section">
         <h1 class="page-title">About AJC</h1>
         <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
-        <a href="#" class="btn btn-branding">Contact Me</a>
+        <a href="../pages/contact.html" class="btn btn-branding">Contact Me</a>
       </div>
       <div class="separator"></div>
     </header>
