--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,7 @@
         <div class="header-section">
             <h1 class="page-title">Contact Me</h1>
             <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
-            <a href="#" class="btn btn-branding">Contact Me</a>
+            <a href="../pages/portfolio.html" class="btn btn-branding">Portfolio</a>
         </div>
         <div class="separator"></div>
     </header>
