--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -70,7 +70,7 @@
     <header>
       <h1 class="page-title">Portfolio</h1>
       <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
-      <a href="#" class="btn btn-branding">Contact Me</a>
+      <a href="../pages/contact.html" class="btn btn-branding">Contact Me</a>
       <div class="separator"></div>
     </header>
     <main>
